--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "outDir": "build/dist",
     "target": "es5",
     "sourceMap": true,
     "jsx": "preserve"
