--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p ./ "
+    "build": "tsc -p ./ && ts-node src/build.ts "
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
     "typescript": "^4.2.2"
   },
   "devDependencies": {
+    "@types/node": "^14.14.37",
+    "ts-node": "^9.1.1",
     "typescript": "^3.7.5"
   }
 }
