--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "module": "es6",
+    "esModuleInterop": true,
     "moduleResolution" : "Node",
     "outDir": "build/dist",
-    "target": "es6",
+    "target": "es5",
     "sourceMap": true,
-    "jsx": "preserve"
+    "jsx": "react-jsx"
 
   },
   "include": [
